# Index_PDF_Translation_Plus

./: Dockerfile  config_copy.py  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
modules/translators/: copy_paste_translator.py  llama_cpp_translator.py  llamacpp_translator.py  translator_base.py
old/: .gitignore  config.py  test_translate.py
old/modules/translators/: README.md  __init__.py  fugumt_translator.py  translator_base.py
old/tests/: test_llamacpp_translator.py
src/: app.py
